Modified the pom.xml to add Maven plugin in order to execute the App class' main method

--- a/trunk/anewaltGroupProject/pom.xml
+++ b/trunk/anewaltGroupProject/pom.xml
@@ -45,4 +45,25 @@
 			<url>http://www.sparkjava.com/nexus/content/repositories/spark/</url>
 		</repository>
 	</repositories>
+
+	<plugin>
+		<groupId>org.codehaus.mojo</groupId>
+		<artifactId>exec-maven-plugin</artifactId>
+		<version>1.2.1</version>
+		<executions>
+			<execution>
+				<goals>
+					<goal>java</goal>
+				</goals>
+			</execution>
+		</executions>
+		<configuration>
+			<mainClass>edu.umw.cpsc.twitterAlt.App</mainClass>
+			<arguments>
+	<!-- <argument>foo</argument> -->
+	<!-- <argument>bar</argument> -->
+			</arguments>
+		</configuration>
+	</plugin>
+
 </project>
