Corrected the missing <build><plugins><plugin> tags that were missing from the previous checking (and caused the build to fail)

--- a/trunk/anewaltGroupProject/pom.xml
+++ b/trunk/anewaltGroupProject/pom.xml
@@ -46,24 +46,28 @@
 		</repository>
 	</repositories>
 
-	<plugin>
-		<groupId>org.codehaus.mojo</groupId>
-		<artifactId>exec-maven-plugin</artifactId>
-		<version>1.2.1</version>
-		<executions>
-			<execution>
-				<goals>
-					<goal>java</goal>
-				</goals>
-			</execution>
-		</executions>
-		<configuration>
-			<mainClass>edu.umw.cpsc.twitterAlt.App</mainClass>
-			<arguments>
-	<!-- <argument>foo</argument> -->
-	<!-- <argument>bar</argument> -->
-			</arguments>
-		</configuration>
-	</plugin>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.2.1</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>java</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<mainClass>edu.umw.cpsc.twitterAlt.App</mainClass>
+					<arguments>
+						<!-- <argument>foo</argument> -->
+						<!-- <argument>bar</argument> -->
+					</arguments>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
