Checked in code for registering a user to Mongo
Also the gson code in the DAO's for reading and writing to the database

--- a/trunk/twitterAlt/pom.xml
+++ b/trunk/twitterAlt/pom.xml
@@ -31,6 +31,11 @@
 			<artifactId>spark-template-freemarker</artifactId>
 			<version>2.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.3</version>
+		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
@@ -46,19 +51,19 @@
 			<url>http://www.sparkjava.com/nexus/content/repositories/spark/</url>
 		</repository>
 	</repositories>
-        
-    <build>        
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.2</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>
-        </plugins>
-  </build>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.2</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
